--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,7 @@ body {
     background-color: #2277dd;
     font-size: 16px;
     font-family: "stoke", "Lucida Bright", "liberation", sans-serif;
-    padding: 10px;
+    padding: 0;
 }
 
 a {
@@ -207,3 +207,4 @@ table,* {
 .colTitle{
     text-align: center;
 }
+
